# yocto-learning

./: .gitignore  CMakeLists.txt  README.md  copying.txt
.github/workflows/: cmake.yml
src/: Main.cpp
